src/objects/Segment__c.object
<CustomObject>
    <description>Account Marketing Segments</description>
    <fields>
        <fullName>SEG_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEG_Geography__c</fullName>
        <globalPicklist>GeographiesList</globalPicklist>
        <label>Geography</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SEG_Network__c</fullName>
        <globalPicklist>NetworkList</globalPicklist>
        <label>Network</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Segment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>